@@ -1,3 +1,10 @@
+2002-03-12  Richard Hestilow  <hestilow@ximian.com>
+
+	* capplet-dir-view.h: Move CappletDirViewLayout enum here,
+	remove include to preferences.h.
+
+	* Makefile.am: Remove preferences.h again.
+
 2002-03-12  jacob berkman  <jacob@ximian.com>
 
 	* capplet-dir-view.c (prefs_menu_cb): comment this out as it makes
